# Project_Dirge

./: .gitignore  AGENTS.md  Makefile  README.md  hlep  pyproject.toml  requirements-dev.txt
.codex/: config.toml
.codex_runtime/: config.toml  models_cache.json
.codex_runtime_link/: auth.json  models_cache.json  version.json
benchmarks/: README.md
core/: capability_engine.py  crash_cluster.py  decision_config.py  decision_engine.py  decision_report_utils.py  exploit_strategy.py  gdb_evidence_utils.py  hypothesis_engine.py  input_mutator.py  meta_sync_utils.py  metrics.py  objective_engine.py  path_utils.py  recovery_engine.py  remote_target_utils.py  session_control.py  session_plan_config.py  stage_contracts.py  stage_flow_utils.py  stage_plan_utils.py  stage_prompt_builder.py  stage_runner.py  state_schema.py  state_utils.py  stdin_seed_utils.py  text_utils.py
docs/: architecture.md  dirge-iteration-log.md  dirge-working-state.md
legacy/: Dockerfile  README.md
policy/: agent.yaml  agent_l0_l2.yaml  budget.yaml  stage_contracts.yaml  stage_runner.yaml
rules/: default.rules
scripts/: check_stage_contracts.py  cleanup_artifacts.py  codex_with_mcp.sh  fake_gdb_mcp.py  gdb_direct_probe.py  gdb_mcp_launcher.py  generate_handoff.py  get_session.sh  health_check_mcp.py  list_sessions.sh  mcp_jsonline_bridge.py  mcp_self_heal.py  pyghidra_mcp_launcher.py  remote_preflight.py  repair_state.py  replay_benchmarks.py  reset_state.sh  run_remote_exp.py  run_session.py  session_api.py  session_attempt_policy.py  session_attempt_runtime.py  session_codex_stage.py  (+23 more)
(+118 files in other folders)
